增加对jsx的支持

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "include": [
     "src/*",
-    "src/**/*"
+    "src/**/*",
+    "node_modules/vue-tsx-support/enable-check.d.ts"
   ],
   "exclude": [
     "node_modules"
