--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.91",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -58,6 +59,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -96,7 +98,10 @@
     "vue-tsx-support": "^1.2.0",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^2.0.6",
     "webpack-dev-server": "^2.9.1",
+    "webpack-fail-plugin": "^2.0.0",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
