--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@types/node": "^8.5.2",
     "axios": "^0.17.1",
-    "element-ui": "^2.0.8",
+    "c-element-ui": "^1.4.14",
     "vue": "^2.5.2",
     "vue-class-component": "^6.1.2",
     "vue-property-decorator": "^6.0.0",
