--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "module": "esnext",
     "target": "es5",
     "moduleResolution": "node",
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "lib": [
       "dom",
       "es2015",
