--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "element-ui": "^2.0.8",
     "vue": "^2.5.2",
     "vue-class-component": "^6.1.2",
-    "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.0"
+    "vuex-class": "^0.3.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.91",
@@ -70,6 +69,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "mocha": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
@@ -95,7 +96,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-property-decorator": "^6.0.0",
+    "vue-property-decorator": "^6.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vue-tsx-support": "^1.2.0",
